test/regression/src/test/idl/compiler/fail/bugjac753.idl
module A
{
    typeprefix B "typeprefix.test";

    interface a1 {};    
};
